--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 :root{
-    --cor--preta:#000000;
-    --cor-branca: #F6F6F6;
-    --cor--azul--claro: #22D4FD;
+    --cor--primaria:#000000;
+    --cor-secundaria: #F6F6F6;
+    --cor--terciaria: #22D4FD;
     --cor--hoover:#272727;
+
+    --cor--primaria--light:#f6f6f6 ;
+    --cor--secundaria--light:#000000;
+
 
     --fonte--primaria:'Krona One', sans-serif;
     --fonte--secundaria:'Montserrat', sans-serif;
@@ -18,11 +22,61 @@
 
 body{
 
-    background-color: var(--cor--preta);
-    color:var(--cor-branca);
+    background-color: var(--cor--primaria);
+    color:var(--cor-secundaria);
     box-sizing: border-box;
+    overflow-y:hidden;
     
 }
+
+body.light{
+    background-color: var(--cor--light1);
+}
+
+.checkbox{
+    opacity: 100%;
+    position: absolute;
+}
+
+.label{
+    background-color: #22D4FD;
+    border-radius: 3.125rem;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 5px;
+    position: relative;
+    height: 26px;
+    width: 50px;
+
+    transform: scale(1.24);
+}
+
+.label .bola{
+    background-color:#f6f6f6;
+    border-radius: 50%;
+    position: absolute;
+    top:2px;
+    left:2px;
+
+    height: 30px;
+    width: 30px;
+
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+
+}
+
+.checkbox:checked + .label .bola{
+    transform: translateX(24px) ;
+
+
+}
+
+
 
 .cabecalho{
     padding:2% 0 0 15% ;
@@ -38,10 +92,11 @@ body{
     font-size: 1.5rem;
     font-family: var(--fonte--secundaria);
     font-weight: 600;
-    color: var(--cor--azul--claro);
+    color: var(--cor--terciaria);
     text-decoration: none;
 
 }
+
 
 .cabecalho__menu__link:hover{
     color:#5a5656;
@@ -53,7 +108,7 @@ body{
 }
 
 .apresentacao{
-    padding: 5% 15%;
+    padding: 1.9% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -71,7 +126,7 @@ body{
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 2.25rem;
+    font-size: 1.8rem;
     font-family:var(--fonte--primaria);
     ;
 }
@@ -96,7 +151,7 @@ body{
     align-items: center;
     gap: 1rem;
     font-family: 'Montserrat', sans-serif ;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     border: 0.15rem solid var(--cor--azul--claro);
     border-radius: 0.5rem;
     width: 20rem;
@@ -104,8 +159,27 @@ body{
     text-align: center;
     text-decoration: none;
     border-radius: 1rem;
-    padding: 1.4rem 0;
+    padding: 1.1rem 0;
     color: #F6F6F6;
+}
+
+.apresentacao__links__redes.light{
+    /* background-color: #22D4FD; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    font-family: 'Montserrat', sans-serif ;
+    font-size: 1.3rem;
+    border: 0.15rem solid var(--cor--azul--claro);
+    border-radius: 0.5rem;
+    width: 20rem;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 1rem;
+    padding: 1.1rem 0;
+    color: var(--cor--secundaria--light);
 }
 
 .apresentacao__links__redes:hover{
